This now looks ok on mobile

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <header>
     <div class="nav">
         <div class="logo-container"><img src="./images/coolsite-logo.png" alt="coolsite-logo"></div>
+        <div class="menubutton">
+            <span class="menubuttonbar"></span>
+            <span class="menubuttonbar"></span>
+            <span class="menubuttonbar"></span>
+        </div>
         <div class="navlinks">
             <ul>
                 <li><a href="#">ABOUT US</a></li>
